# WiFiSocketServerRTOS

./: .cproject  .gitignore  .gitmodules  .project  BuildAll.sh  CMakeLists.txt  Makefile  README.md  WiFiSocketServerRTOS.code-workspace  WiFiSocketServerRTOS.code-workspace-dev  build8266.sh  buildesp32.bat  buildeth.bat  hi_server.py  partitions.csv  partitions.esp32c3.csv  partitions.esp8266.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp8266  sdkconfig.defaults.idf  sdkconfig.defaults.s3
components/flashdb/: CMakeLists.txt  component.mk
components/flashdb/config/: fal_cfg.h  fdb_cfg.h
components/indicator/: CMakeLists.txt  led_indicator.c
components/indicator/include/: led_indicator.h
main/: main.c  main.cpp
src/: CMakeLists.txt  Config.h  Connection.cpp  Connection.h  DNSServer.cpp  DNSServer.h  HSPI.cpp  HSPI.h  Listener.cpp  Listener.h  Makefile.projbuild  Misc.cpp  Misc.h  PooledStrings.h  SocketServer.cpp  WirelessConfigurationMgr.cpp  WirelessConfigurationMgr.h  component.mk  create_image.py  xxx
src/esp32/: HSPI.cpp  spi.h
src/esp32c3/: HSPI.cpp  spi.h
src/esp8266/: HSPI.cpp  esp_intr_alloc.h  gpio.c  gpio.h  partition.c  partition.h  scratch.ld  spi.h  spi_reg.h
src/include/: MessageFormats.h
src/stubs/: Arduino.h  CMakeLists.txt  DNSServer.h  EEPROM.h  ESP8266WiFi.h  user_interface.h
